--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="loginTitle">Login</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="wrong_username_or_password">Wrong username or password !</string>
+    <string name="ip_address">IP Address</string>
+    <string name="ip_port">IP Port</string>
+    <string name="company_no">Company No</string>
+    <string name="ip_settings">IP Settings</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
