--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="required">*Required</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="itemNCode">itemNCode</string>
+    <string name="itemName">itemName</string>
     <string name="qty">qty</string>
     <string name="price">price</string>
     <string name="unit">unit</string>
@@ -22,6 +23,13 @@
     <string name="tax">tax</string>
     <string name="area"> area</string>
     <string name="discount"> Discount</string>
-
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="reqired_filled">*Required</string>
     <string name="save"> Save</string>
+    <string name="invaledZero">Invaled Zero</string>
+
+    <string name="emptyList">Empty List</string>
+
+    <string name="avlqty">Available Qty</string>
 </resources>
