--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 
     <string name="app_name">Building Store</string>
     <string name="loginTitle">Login</string>
-    <string name="username">Username:</string>
-    <string name="password">Password:</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
     <string name="wrong_username_or_password">Wrong username or password !</string>
     <string name="ip_address">IP Address</string>
     <string name="ip_port">IP Port</string>
@@ -12,6 +12,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="customerName">Customer Name</string>
+    <string name="customer_name">Customer Name:</string>
     <string name="required">*Required</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="itemNCode">itemNCode</string>
@@ -53,14 +54,24 @@
 
     <string name="emptyList">Empty List</string>
 
-    <string name="avlqty">Available Qty</string>
+    <string name="avlqty">Available Qty:</string>
     <string name="type">Type:</string>
-    <string name="dis_per">Can add discount?</string>
+    <string name="dis_per">Can add discount ?</string>
     <string name="mobilnum">Mobile number:</string>
     <string name="Empty">Empty</string>
     <string name="savedSuccsesfule">Saved Successfully</string>
     <string name="Order">Order</string>
     <string name="incorrect_user_info">Incorrect User Information !</string>
+
+    <string name="add_item_to">Add item to cart ?</string>
+    <string name="customer">Customer</string>
+    <string name="search_items">Search Items ..</string>
+    <string name="cart">Cart</string>
+    <string name="add">Add</string>
+    <string name="reports">Reports</string>
+    <string name="export">Export</string>
+    <string name="home">Home</string>
+    <string name="save_for_later">Save for later</string>
 
     <string-array name="user_type">
         <item>Admin</item>
