--- a/app/src/main/res/values-ar-rJO/strings.xml
+++ b/app/src/main/res/values-ar-rJO/strings.xml
@@ -52,6 +52,8 @@
     <string name="Empty">حقل فارغ</string>
     <string name="mobilnum">رقم الهاتف:</string>
     <string name="savedSuccsesfule">تم الحفظ بنجاح</string>
+    <string name="fillbasket">fill The basket with Items!!</string>
+    <string name="vocher">فاتورة</string>
     <string name="Order">Order</string>
     <string-array name="user_type">
 
