--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Building Store</string>
+    <string name="app_name">Artic Store</string>
     <string name="loginTitle">Login</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
