--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,8 +76,11 @@
     <string name="home">Home</string>
     <string name="save_for_later">Save for later</string>
     <string name="user_already_exists">Username Already Exists !</string>
+    <string name="item_list">Item List</string>
 
-    fillbasket
+    <string name="export_data_msg">Do you want to export all data and get the new data\nfrom the server?</string>
+    <string name="export_data">Export Data</string>
+
     <string-array name="user_type">
         <item>Admin</item>
         <item>User</item>
