--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="box">Box</string>
     <string name="meter">Meter</string>
     <string name="show">Show</string>
-    <string name="VoHNO">Order No.</string>
+    <string name="VoHNO">Order No</string>
     <string name="addnewuser">Add New User</string>
     <string name="addnewcustomer">Add New Customer</string>
     <string name="invaledZero">Invaled Zero</string>
@@ -77,7 +77,7 @@
     <string name="save_for_later">Save for later</string>
     <string name="user_already_exists">Username Already Exists !</string>
     <string name="net_sales">Net Sales</string>
-
+    <string name="Sub_total">Sub total</string>
     <string name="item_list">Item List</string>
 
     <string name="export_data_msg">Do you want to export all data and get the new data\nfrom the server?</string>
